tests/compile-fail/null_pointer_deref_zst.rs
fn main() {
    let x: () = unsafe { *std::ptr::null() }; //~ ERROR memory access failed: 0x0 is not a valid pointer
    panic!("this should never print: {:?}", x);
}
